--- a/public/style.css
+++ b/public/style.css
@@ -7,6 +7,10 @@ button{
 #fav-container{
     margin-top: 15px;
 }
+.nav > li{
+    width: 200px;
+    text-align: center;
+}
 .well{
     height: 125px;
 }
@@ -16,10 +20,11 @@ button{
 .fa-star-o{
     margin: 5px;
     float: right;
+    cursor: pointer;
 }
 .form-inline{
-    text-align: center;
-    margin: 15px;
+    margin-top: 15px;
+    margin-bottom: 15px;
 }
 #search-box{
     width: 30%;
