--- a/public/style.css
+++ b/public/style.css
@@ -45,10 +45,11 @@ h5{
 }
 img{
     width: 2em;
-    opacity: .5;
 }
 .expand{
+    position: absolute;
     width: 100%;
+    object-fit: cover;
 }
 #fav-container{
     margin-top: 15px;
@@ -59,8 +60,6 @@ img{
 
 #favorite-page{
     font-family: 'Raleway', sans-serif;
-}
-#main-page{
 }
 #container{
  padding-top: 7rem;  
@@ -168,8 +167,62 @@ img{
 @media (min-width: 768px){
     .form-inline .form-control {
         display: inline-block;
-        width: 30rem !important;
+        width: 25rem !important;
         vertical-align: middle;
         margin-right: .5rem;
     }
+    .navbar-nav{
+        margin: 0px;
+    }
 }
+@media (min-width: 550px){
+    .form-inline .form-control {
+        display: inline-block;
+        width: 20rem !important;
+        vertical-align: middle;
+        margin-right: .5rem;
+    }
+    .navbar-nav{
+        margin: 0px !important;
+        display: flex;
+    }
+}
+@media (max-width: 1076px){
+    .about-list{
+        display: block;
+        padding: 0px;
+        margin: 0px;
+    }
+    .about-list > li {
+        margin: 0px; 
+        padding: 0px; 
+    } 
+    h3{
+        font-size: 20px;
+    }
+    img{
+        width: 1.5em;
+    }
+    .landing-search{
+        margin-top: 2rem;
+    }
+    .form-inline .form-control{
+        width: 15rem !important;
+    }
+}
+
+@media (max-width: 991px){
+    .expand{
+        height: 100%;
+    }
+    .descripton{
+        left: 20%;
+        top: 15%;
+        width: 66.666667% !important;
+    }
+    
+    .form-inline .form-control{
+        width: 30rem !important;
+    }
+}
+
